# vibe-coding-playground

./: AGENTS.md  README.md  opencode.json
my_project/: .coverage  Makefile  README.md  databricks.yml  pyproject.toml
my_project/notebooks/: sensor_data_producer.py  test_notebook.py
my_project/resources/: sensor_data_producer.job.yml  test_deployment.job.yml
my_project/src/my_project/: __init__.py  data_producer.py  main.py
my_project/tests/: main_test.py  test_data_producer.py
