[project]
name = "my_project"
version = "0.0.1"
authors = [{ name = "jesse.schouten@outlook.com" }]
requires-python = ">=3.12,<=3.13"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    # Code completion support for Lakeflow Declarative Pipelines, also install databricks-connect
    "databricks-dlt",
    # databricks-connect can be used to run parts of this project locally.
    # Note that for local development, you should use a version that is not newer
    # than the remote cluster or serverless compute you connect to.
    # See also https://docs.databricks.com/dev-tools/databricks-connect.html.
    "databricks-connect==17.2.*",
    # Databricks SDK for runtime type hints (dbutils, spark, etc.)
    "databricks-sdk>=0.67.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]

[project.scripts]
main = "my_project.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-include = ["*.ipynb"]
extend-exclude = ["scratch"]
builtins = ["dbutils", "display", "spark"]

[tool.ruff.lint]
extend-select = ["F"]

[tool.ruff.lint.per-file-ignores]
"*.py" = []


